osci-ai-website-align-fixing

--- a/index.css
+++ b/index.css
@@ -2426,7 +2426,7 @@ body {
   .text-div {
     display: grid;
     margin-top: -39rem;
-    margin-left: 3.5rem;
+    margin-left: 3.7rem;
     position: absolute;
     gap: 5rem;
   }
